[tool.poetry]
name = "votetrackingstuff"
version = "0.1.0"
description = ""
authors = ["Kourosh <kouroshsimpkins@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
requests = "^2.32.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
